Fix vite base path

--- a/book-now.html
+++ b/book-now.html
@@ -1376,9 +1376,9 @@
             </div>
         </main>
 
-        <script src="/js/components.js"></script>
-        <script src="/js/main.js"></script>
-        <script src="/js/booking.js"></script>
+        <script type="module"  src="./js/components.js"></script>
+        <script type="module"  src="./js/main.js"></script>
+        <script type="module"  src="./js/booking.js"></script>
     </body>
     <div id="app-footer"></div>
 </html>
