--- a/login.html
+++ b/login.html
@@ -382,9 +382,9 @@
 
         <div id="app-footer"></div>
 
-        <script src="/js/components.js"></script>
-        <script src="/js/main.js"></script>
-        <script src="/js/auth.js"></script>
+        <script type="module"  src="./js/components.js"></script>
+        <script type="module"  src="./js/main.js"></script>
+        <script type="module"  src="./js/auth.js"></script>
 
         <script>
             window.addEventListener('pageshow', (event) => {
