--- a/blog.html
+++ b/blog.html
@@ -761,8 +761,8 @@
         <div id="app-footer"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="/js/components.js"></script>
-        <script src="/js/main.js"></script>
+        <script type="module"  src="./js/components.js"></script>
+        <script type="module"  src="./js/main.js"></script>
 
         <script>
             window.addEventListener('pageshow', (event) => {
