--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
         <title>Hỏi đáp thường gặp - Dozzie</title>
 
         <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" href="./src/style.css" />    
+        <link rel="stylesheet" href="./src/style.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -808,7 +808,7 @@
 
         <div id="app-footer"></div>
 
-        <script src="/js/components.js"></script>
-        <script src="/js/main.js"></script>
+        <script type="module" src="./js/components.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
