--- a/index.html
+++ b/index.html
@@ -1700,9 +1700,9 @@
             </div>
         </main>
 
-        <script src="/js/components.js"></script>
+        <script type="module" src="./js/components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="/js/main.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
     <div id="app-footer"></div>
 </html>
