Update about page without large video

--- a/faq.html
+++ b/faq.html
@@ -413,6 +413,7 @@
                 </div>
             </section>
 
+            <!--QUESTION -->
             <div class="mb-16 text-center" data-aos="fade-down">
                 <span
                     class="font-artusi mb-2 block text-sm font-bold tracking-widest text-[#229ebd] uppercase"
@@ -428,15 +429,16 @@
                     tiện ích tại Dozzie Capsule Hotel.
                 </p>
             </div>
-            <div class="space-y-4" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="text-center" data-aos="fade-up" data-aos-delay="100">
                 <h3
-                    class="font-artusi mt-8 mb-4 border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
+                    class="font-artusi mt-8 mb-[120px] border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
                 >
                     Đặt phòng & Thanh toán
                 </h3>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -473,7 +475,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -509,7 +511,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -546,13 +548,13 @@
                 </div>
 
                 <h3
-                    class="font-artusi mt-12 mb-4 border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
+                    class="font-artusi mt-[120px] mb-[120px] border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
                 >
                     Quy định Check-in & Lưu trú
                 </h3>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -589,7 +591,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -625,7 +627,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -662,13 +664,13 @@
                 </div>
 
                 <h3
-                    class="font-artusi mt-12 mb-4 border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
+                    class="font-artusi mt-[120px] mb-[120px] border-b border-gray-200 pb-2 text-xl font-bold text-[#18233B]"
                 >
                     Tiện ích & Dịch vụ
                 </h3>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -706,7 +708,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
@@ -743,7 +745,7 @@
                 </div>
 
                 <div
-                    class="faq-item rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
+                    class="faq-item mb-[30px] rounded-2xl border border-gray-100 bg-white px-6 shadow-sm transition-all hover:shadow-md"
                 >
                     <button
                         class="faq-btn group flex w-full items-center justify-between py-6 text-left focus:outline-none"
