--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                         <p
                                             class="font-bogart mb-4 flex-1 text-sm text-gray-500"
                                         >
-                                            Gói lưu trú dài hạn tại Bobopod với
+                                            Gói lưu trú dài hạn tại Dozzie với
                                             mức giá không tưởng. Chỉ từ
                                             115k/đêm.
                                         </p>
@@ -653,20 +653,20 @@
                     <div class="w-full lg:w-1/2" data-aos="fade-right">
                         <span
                             class="font-artusi mb-2 block text-sm font-bold tracking-widest text-[#229ebd] uppercase"
-                            >Bobopod</span
+                            >Dozzie</span
                         >
                         <h3
                             class="font-artusi mb-4 text-3xl font-bold text-gray-800"
                         >
-                            Giấc ngủ chất lượng trong tầm tay
+                            Trải nghiệm sự đơn giản một cách trọn vẹn
                         </h3>
                         <p
                             class="font-bogart mb-6 leading-relaxed text-gray-500"
                         >
-                            Là chuỗi khách sạn con nhộng công nghệ cao tiên
-                            phong. Dozzie Pod mang lại trải nghiệm giấc ngủ sâu
-                            với khả năng cách âm tuyệt đối, điều chỉnh ánh sáng
-                            theo tâm trạng và check-in không chạm.
+                            Đặt phòng, xác thực danh tính, nhận phòng và mở khóa
+                            kén chỉ với vài thao tác. Hệ thống tự động của
+                            Dozzie giúp mọi bước trở nên nhanh gọn, mượt mà và
+                            tiện lợi cho bạn.
                         </p>
                         <ul class="font-bogart mb-8 space-y-2 text-gray-600">
                             <li class="flex items-center">
@@ -708,7 +708,7 @@
                             class="relative overflow-hidden rounded-2xl shadow-2xl"
                         >
                             <img
-                                src="https://images.unsplash.com/photo-1599619351208-3e6c839d6828?q=80&w=2072&auto=format&fit=crop"
+                                src="./assets/imgs/index-img-1.png"
                                 alt="Pod"
                                 class="h-auto w-full object-cover"
                             />
@@ -732,7 +732,7 @@
                             <div class="mt-3 flex items-center justify-between">
                                 <span
                                     class="font-artusi text-sm font-bold text-[#229ebd]"
-                                    >150k</span
+                                    >109k</span
                                 >
                                 <button
                                     class="font-artusi rounded bg-[#229ebd] px-3 py-1 text-xs text-white"
@@ -753,19 +753,19 @@
                     <div class="w-full lg:w-1/2" data-aos="fade-left">
                         <span
                             class="font-artusi mb-2 block text-sm font-bold tracking-widest text-[#229ebd] uppercase"
-                            >Bobocabin</span
+                            >Dozzie</span
                         >
                         <h3
                             class="font-artusi mb-4 text-3xl font-bold text-gray-800"
                         >
-                            Chữa lành cùng mẹ thiên nhiên
+                            Thoải mái tối đa cho riêng bạn
                         </h3>
                         <p
                             class="font-bogart mb-6 leading-relaxed text-gray-500"
                         >
-                            Thoát khỏi khói bụi thành phố và thức dậy giữa rừng
-                            thông. Cabin thông minh với cửa kính panorama giúp
-                            bạn chạm vào thiên nhiên ngay từ chiếc giường ấm áp.
+                            Không gian kén được thiết kế yên tĩnh, riêng tư và
+                            ấm áp, giúp bạn thư giãn sâu và hồi phục năng lượng
+                            trong thời gian ngắn nhất.
                         </p>
                         <a
                             href="#"
@@ -778,7 +778,7 @@
                             class="relative overflow-hidden rounded-2xl shadow-2xl"
                         >
                             <img
-                                src="https://images.unsplash.com/photo-1445019980597-93fa8acb246c?q=80&w=2074&auto=format&fit=crop"
+                                src="./assets/imgs/index-img-2.png"
                                 alt="Cabin"
                                 class="h-auto w-full object-cover"
                             />
@@ -827,15 +827,15 @@
                         <h3
                             class="font-artusi mb-4 text-3xl font-bold text-gray-800"
                         >
-                            Ngôi nhà thứ hai của bạn
+                            Nằm giữa nhịp sống thành phố
                         </h3>
                         <p
                             class="font-bogart mb-6 leading-relaxed text-gray-500"
                         >
-                            Nâng tầm trải nghiệm sống chung. Khu vực sinh hoạt
-                            chung được trang bị đầy đủ tiện nghi: Bếp, Máy giặt
-                            sấy, Phòng làm việc và PS5 để giải trí cùng những
-                            người bạn mới.
+                            Dozzie được đặt tại những vị trí thuận tiện, giúp
+                            bạn dễ dàng di chuyển, nghỉ ngơi giữa ngày bận rộn
+                            hoặc tái tạo năng lượng trước khi tiếp tục hành
+                            trình khám phá thành phố.
                         </p>
                         <button
                             class="font-artusi rounded-full border-2 border-gray-800 px-6 py-2 font-bold text-gray-800 transition-colors hover:bg-gray-800 hover:text-white"
@@ -1187,7 +1187,7 @@
                     data-aos="zoom-in"
                 >
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.673636140526!2d108.2595011752502!3d15.978410941862526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314210f2d038af0f%3A0x51c64b1130497f99!2sFPT%20Software%20Danang!5e0!3m2!1svi!2s!4v1763819534473!5m2!1svi!2s"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.491628593413!2d108.24340567525131!3d16.0399582402207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314217677aa3ee87%3A0x573f025a229825ef!2zNjEgSOG7kyBYdcOibiBIxrDGoW5nLCBC4bqvYyBN4bu5IEFuLCBOZ8WpIEjDoG5oIFPGoW4sIMSQw6AgTuG6tW5nIDU1MDAwMCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1764682716723!5m2!1svi!2s"
                         width="1080"
                         height="550"
                         style="border: 0"
