--- a/book-now.html
+++ b/book-now.html
@@ -450,30 +450,6 @@
                                     stroke-linecap="round"
                                     stroke-linejoin="round"
                                     stroke-width="2"
-                                    d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z"
-                                ></path>
-                            </svg>
-                        </div>
-                        <span
-                            class="font-bogart text-sm text-gray-600 transition-colors group-hover:text-gray-800 md:text-base"
-                            >Phòng cầu nguyện</span
-                        >
-                    </div>
-
-                    <div class="group flex items-center gap-3">
-                        <div
-                            class="flex h-8 w-8 items-center justify-center text-gray-400 transition-colors group-hover:text-[#229ebd]"
-                        >
-                            <svg
-                                class="h-6 w-6"
-                                fill="none"
-                                stroke="currentColor"
-                                viewBox="0 0 24 24"
-                            >
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
                                     d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
                                 ></path>
                             </svg>
@@ -509,7 +485,7 @@
                             class="group relative h-[400px] w-full overflow-hidden rounded-3xl bg-gray-100 shadow-inner lg:w-1/2"
                         >
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.673636140526!2d108.2595011752502!3d15.978410941862526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314210f2d038af0f%3A0x51c64b1130497f99!2sFPT%20Software%20Danang!5e0!3m2!1svi!2s!4v1763992752719!5m2!1svi!2s"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.491628593413!2d108.24340567525131!3d16.0399582402207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314217677aa3ee87%3A0x573f025a229825ef!2zNjEgSOG7kyBYdcOibiBIxrDGoW5nLCBC4bqvYyBN4bu5IEFuLCBOZ8WpIEjDoG5oIFPGoW4sIMSQw6AgTuG6tW5nIDU1MDAwMCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1764682716723!5m2!1svi!2s"
                                 width="580"
                                 height="415"
                                 style="border: 0"
@@ -552,8 +528,8 @@
                                 <p
                                     class="font-bogart text-sm leading-relaxed text-gray-500"
                                 >
-                                    Hoà Hải, Ngũ Hành Sơn, Thành phố Đà Nẵng,
-                                    Việt Nam.
+                                    61 Hồ Xuân Hương, Ngũ Hành Sơn, Thành phố Đà
+                                    Nẵng, Việt Nam.
                                 </p>
                             </div>
 
@@ -1092,7 +1068,7 @@
                                 >
                                     <div class="flex items-center gap-2">
                                         <span
-                                            class="flex h-8 w-8 items-center justify-center rounded-full bg-[#d946ef] text-xs font-bold text-white"
+                                            class="flex h-8 w-8 items-center justify-center rounded-full bg-[#8845e5] text-xs font-bold text-white"
                                             >FM</span
                                         >
                                         <div>
@@ -1110,7 +1086,7 @@
                                     </div>
                                     <div class="text-right">
                                         <span
-                                            class="text-lg font-black text-[#d946ef]"
+                                            class="text-lg font-black text-[#8845e5]"
                                             id="req-female"
                                             >0</span
                                         >
@@ -1362,7 +1338,7 @@
                         data-aos-delay="100"
                     >
                         <div
-                            class="font-artusi absolute top-0 left-0 z-10 rounded-br-2xl bg-[#d946ef] px-6 py-2 font-bold text-white"
+                            class="font-artusi absolute top-0 left-0 z-10 rounded-br-2xl bg-[#8845e5] px-6 py-2 font-bold text-white"
                         >
                             TẦNG 2 - KHU NỮ (FM)
                         </div>
@@ -1376,9 +1352,9 @@
             </div>
         </main>
 
-        <script type="module"  src="./js/components.js"></script>
-        <script type="module"  src="./js/main.js"></script>
-        <script type="module"  src="./js/booking.js"></script>
+        <script type="module" src="./js/components.js"></script>
+        <script type="module" src="./js/main.js"></script>
+        <script type="module" src="./js/booking.js"></script>
     </body>
     <div id="app-footer"></div>
 </html>
