--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <title>Đăng nhập / Đăng ký - Dozzie</title>
 
         <script src="https://cdn.tailwindcss.com"></script>
-       
+
         <link rel="stylesheet" href="./src/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -301,7 +301,7 @@
                                     type="text"
                                     id="reg-name"
                                     class="w-full rounded-xl border border-gray-200 bg-gray-50 p-3 text-gray-800 transition-all outline-none focus:ring-2 focus:ring-[#229ebd]"
-                                    placeholder="Vd: Long Đại Ca"
+                                    placeholder="Vd: Long Phùng"
                                     required
                                 />
                             </div>
@@ -382,9 +382,9 @@
 
         <div id="app-footer"></div>
 
-        <script type="module"  src="./js/components.js"></script>
-        <script type="module"  src="./js/main.js"></script>
-        <script type="module"  src="./js/auth.js"></script>
+        <script type="module" src="./js/components.js"></script>
+        <script type="module" src="./js/main.js"></script>
+        <script type="module" src="./js/auth.js"></script>
 
         <script>
             window.addEventListener('pageshow', (event) => {
