--- a/about.html
+++ b/about.html
@@ -180,8 +180,8 @@
 
         <div id="app-footer"></div>
 
-        <script src="/js/components.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="./js/components.js"></script>
+        <script src="./js/main.js"></script>
 
         <script>
             // Nếu ông muốn Navbar trong suốt lúc đầu cho đẹp thì thêm đoạn này
