--- a/membership.html
+++ b/membership.html
@@ -247,7 +247,7 @@
 
         <div id="app-footer"></div>
 
-        <script src="./js/components.js"></script>
-        <script src="./js/main.js"></script>
+        <script type="module" src="./js/components.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
