chore: fix UI for web

--- a/book-now.html
+++ b/book-now.html
@@ -93,7 +93,8 @@
                                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
                                 ></path>
                             </svg>
-                            123 Đường Yên Bái, Quận Hải Châu, TP. Đà Nẵng
+                            61 Hồ Xuân Hương, Bắc Mỹ An, Ngũ Hành Sơn, TP. Đà
+                            Nẵng
                         </p>
 
                         <div class="mt-4 flex items-center gap-4">
@@ -140,7 +141,7 @@
                         class="group relative cursor-pointer overflow-hidden rounded-[2rem] lg:col-span-2 lg:row-span-2"
                     >
                         <img
-                            src="https://images.unsplash.com/photo-1599619351208-3e6c839d6828?q=80&w=2072&auto=format&fit=crop"
+                            src="./assets/imgs/booking_1.png"
                             class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-110"
                             alt="Main View"
                         />
@@ -153,7 +154,7 @@
                         class="group relative hidden cursor-pointer overflow-hidden rounded-[2rem] lg:col-span-1 lg:block"
                     >
                         <img
-                            src="https://images.unsplash.com/photo-1556745753-b2904692b3cd?q=80&w=1973&auto=format&fit=crop"
+                            src="./assets/imgs/booking_2.png"
                             class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-110"
                             alt="Lobby"
                         />
@@ -163,7 +164,7 @@
                         class="group relative hidden cursor-pointer overflow-hidden rounded-[2rem] lg:col-span-1 lg:block"
                     >
                         <img
-                            src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?q=80&w=2070&auto=format&fit=crop"
+                            src="./assets/imgs/booking_3.jpegC"
                             class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-110"
                             alt="Bathroom"
                         />
@@ -336,7 +337,7 @@
                         </div>
                         <span
                             class="font-bogart text-sm text-gray-600 transition-colors group-hover:text-gray-800 md:text-base"
-                            >Bãi đậu xe (Có phí)</span
+                            >Bãi đậu xe</span
                         >
                     </div>
 
@@ -568,7 +569,7 @@
                                         </div>
                                         <span
                                             class="rounded-lg bg-blue-50 px-2 py-1 text-xs font-bold text-[#229ebd]"
-                                            >0.5 km</span
+                                            >5 km</span
                                         >
                                     </div>
 
@@ -590,7 +591,7 @@
                                         </div>
                                         <span
                                             class="rounded-lg bg-blue-50 px-2 py-1 text-xs font-bold text-[#229ebd]"
-                                            >0.8 km</span
+                                            >6 km</span
                                         >
                                     </div>
 
@@ -601,18 +602,18 @@
                                             <h4
                                                 class="font-bold text-gray-700 transition-colors group-hover:text-[#229ebd]"
                                             >
-                                                Bảo tàng Chăm
+                                                Biển Mỹ Khê
                                             </h4>
                                             <p
                                                 class="mt-1 text-xs text-gray-400"
                                             >
-                                                Lưu giữ nét văn hóa Chăm Pa độc
-                                                đáo nhất thế giới.
+                                                Bãi biển tuyệt đẹp với những trò
+                                                chơi nước thú vị
                                             </p>
                                         </div>
                                         <span
                                             class="rounded-lg bg-blue-50 px-2 py-1 text-xs font-bold text-[#229ebd]"
-                                            >1.2 km</span
+                                            >2 km</span
                                         >
                                     </div>
 
@@ -623,13 +624,13 @@
                                             <h4
                                                 class="font-bold text-gray-700 transition-colors group-hover:text-[#229ebd]"
                                             >
-                                                Công viên APEC
+                                                Phố đi bộ An thượng
                                             </h4>
                                             <p
                                                 class="mt-1 text-xs text-gray-400"
                                             >
-                                                Địa điểm check-in kiến trúc cánh
-                                                diều ấn tượng.
+                                                Địa điểm check-in và khám phá ẩm
+                                                thực.
                                             </p>
                                         </div>
                                         <span
