--- a/book-now.html
+++ b/book-now.html
@@ -164,7 +164,7 @@
                         class="group relative hidden cursor-pointer overflow-hidden rounded-[2rem] lg:col-span-1 lg:block"
                     >
                         <img
-                            src="./assets/imgs/booking_3.jpegC"
+                            src="./assets/imgs/booking_3.jpeg"
                             class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-110"
                             alt="Bathroom"
                         />
