--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             rel="stylesheet"
         />
         <link href="./src/style.css" rel="stylesheet" />
+        <link href="./src/voice-agent.css" rel="stylesheet" />
         <script>
             tailwind.config = {
                 theme: {
@@ -1692,6 +1693,7 @@
         <script type="module" src="./js/components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script type="module" src="./js/main.js"></script>
+        <script type="module" src="./js/voice-agent.js"></script>
     </body>
     <div id="app-footer"></div>
 </html>
